[project]
name = "ai-solo-leveling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.12.2",
]

[tool.ruff]
# Enable Pyflakes, pycodestyle, and isort rules.
select = ["E", "F", "I"]

[tool.ruff.format]
# Use black-compatible formatting.
quote-style = "double"
